deploy/namespaces/pompetrack-core/istio/01-pompetrack-core.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pompetrack-core
  labels:
    istio.io/rev: default
