deploy/namespaces/pompetrack-core/istio/02-peerauthentication-strict.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtls
  namespace: pompetrack-core
spec:
  mtls:
    mode: STRICT
