deploy/namespaces/pompetrack-core/istio/06-peerauth-streamlit-ui-permissive.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: streamlit-mtls-permissive
  namespace: pompetrack-core
spec:
  selector:
    matchLabels:
      app: streamlit
  mtls:
    mode: STRICT
  portLevelMtls:
    8501:
      mode: PERMISSIVE
