deploy/namespaces/pompetrack-core/istio/09-peerauth-ingestion-permissive.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: ingestion-mtls-permissive
  namespace: pompetrack-core
spec:
  selector:
    matchLabels:
      app: ingestion
  mtls:
    mode: STRICT
  portLevelMtls:
    80:
      mode: PERMISSIVE
