deploy/namespaces/pompetrack-core/istio/07-dr-worker-fhir-medplum.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-medplum-mesh-istio-mutual
  namespace: pompetrack-core
spec:
  host: medplum-mesh.medplum.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
