deploy/namespaces/pompetrack-core/istio/05-authz-ingestion-allow.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authz-ingestion-allow
  namespace: pompetrack-core
spec:
  selector:
    matchLabels:
      app: ingestion
  action: ALLOW
  rules:
  # streamlit -> ingestion port 80 uniquement
  - from:
    - source:
        principals:
        - cluster.local/ns/pompetrack-core/sa/streamlit
        - cluster.local/ns/pompetrack-core/sa/worker-fhir
    to:
    - operation:
        ports: ["80"]
