deploy/namespaces/pompetrack-core/istio/08-minio-allow-airflow.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: minio-allow-airflow
  namespace: pompetrack-core
spec:
  selector:
    matchLabels:
      app: minio
      release: pompetrack-core
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["airflow","pg-backups"]
      to:
        - operation:
            ports: ["9000"]
